--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@sentry/react": "^6.19.7",
+    "@sentry/tracing": "^6.19.7",
     "date-fns": "^2.28.0",
     "js-cookie": "^3.0.1",
     "react": "^17.0.1",
